# fprintclear

./: .pre-commit-config.yaml  README.md  fprintclear.py  pyproject.toml
